--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,7 +1,7 @@
 /* footer */
 .footer__container {
   position: relative;
-  transform: translateY(100%);
+  /* transform: translateY(100%); */
   background-color: #242424;
   padding: 4rem 0 2rem 0;
   display: flex;
