--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,7 +2,7 @@
 .footer__container {
   position: relative;
   /* transform: translateY(100%); */
-  background-color: #242424;
+  background-color: #2c2c2c;
   padding: 4rem 0 2rem 0;
   display: flex;
   flex-direction: column;
@@ -127,4 +127,59 @@
 }
 
 @media screen and (max-width: 768px) {
+}
+
+
+/* arrow css*/
+
+
+.arrow {
+  opacity: 0;
+  position: absolute;
+      left: 50%;
+      bottom: 2%;
+  transform-origin: 5% 50%;
+  transform: translate3d(-5%, -5%, 0);
+}
+
+.arrow-first {
+  animation: arrow-movement 2s ease-in-out infinite;
+}
+.arrow-second {
+  animation: arrow-movement 2s 1s ease-in-out infinite;
+}
+
+.arrow:before,
+.arrow:after {
+  background: #2c2c2c;
+  content: '';
+  display: block;
+  height: 3px; 
+  position: absolute;
+      top: 0;
+      left: 0;
+  width: 30px;
+}
+
+.arrow:before {
+  transform: rotate(45deg) translateX(-23%);
+  transform-origin: top left;
+}
+
+.arrow:after {
+  transform: rotate(-45deg) translateX(23%);
+  transform-origin: top right;
+}
+
+@keyframes arrow-movement {
+  0% { 
+      opacity: 0;
+      bottom: 5%;
+  }
+  70% {
+      opacity: 1;
+  }
+  100% { 
+      opacity: 0;
+  }
 }
