--- a/client/src/App.css
+++ b/client/src/App.css
@@ -328,6 +328,7 @@ a {
 }
 
 .board__view--img {
+  position: static;
   margin: 15px 0px 10px 15px;
   padding: 15px 15px 10px 15px;
 }
@@ -460,7 +461,7 @@ a {
   border-bottom: 1px solid #000;
   line-height: 160%;
   font-size: 1rem;
-  height: 388px;
+  height: 450px;
 }
 
 @media (max-width: 1000px) {
@@ -479,10 +480,6 @@ a {
 }
 
 /* write */
-.board__write {
-  border-top: 2px solid #000;
-}
-
 .board__write--title,
 .board__write--info {
   padding: 15px;
@@ -508,10 +505,23 @@ a {
   height: 40px;
 }
 
+.board__NFT--name {
+  padding: 10px;
+  width: 30%;
+  height: 40px;
+  margin: 10px 0;
+}
+
+.board__NFT--description {
+  padding: 10px;
+  width: 50%;
+  height: 105px;
+  margin-top: 10px;
+}
+
 .board__icon {
   display: inline-block;
   position: relative;
-  top: -4px;
   margin-left: 100px;
 }
 
@@ -566,6 +576,67 @@ a {
   box-sizing: border-box;
   border: 0;
   resize: vertical;
+}
+
+.board__create--component {
+  margin: 2rem 0 3rem 20rem;
+  border: 0;
+  border-radius: 10px;
+  display: inline-block;
+  position: relative;
+  width: 60%;
+  box-shadow: 0 1px 15px 1px rgb(39 39 39 / 10%);
+}
+
+.board__create--content {
+  border-top: 2px solid #000;
+  padding: 20px 10px 30px 30px;
+  border-bottom: 1px dashed #ddd;
+}
+
+.board__create--sup-red {
+  color: red;
+  font-size: medium !important;
+}
+
+.board__create--item-data-form {
+  color: gray;
+}
+
+.board__create--input-box {
+  margin-top: 0.5rem;
+  border-radius: 0.25rem;
+  border: 0.25rem gray dashed;
+  width: 20rem;
+  height: 15rem;
+  padding: 0.25rem;
+}
+.board__create--input-box-file {
+  box-sizing: border-box;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+}
+.board__create--input-box-file:hover {
+  background-color: lightgray;
+}
+.board__create--input-box-file-img {
+  width: 25%;
+  height: 25%;
+  margin-top: 25%;
+  margin-bottom: 25%;
+}
+
+.board__NFT--container {
+  width: 900px;
+  height: 250px;
+}
+
+.board__write--NFTname {
+  position: relative;
+  right: -400px;
+  top: -240px;
 }
 
 @media (max-width: 1000px) {
@@ -627,15 +698,13 @@ ul.pagination li a.active {
   color: #337ab7;
 }
 
-
 /* arrow css*/
-
 
 .arrow {
   opacity: 0;
   position: absolute;
-      left: 50%;
-      bottom: 2%;
+  left: 50%;
+  bottom: 2%;
   transform-origin: 5% 50%;
   transform: translate3d(-5%, -5%, 0);
 }
@@ -650,12 +719,12 @@ ul.pagination li a.active {
 .arrow:before,
 .arrow:after {
   background: #2c2c2c;
-  content: '';
+  content: "";
   display: block;
-  height: 3px; 
+  height: 3px;
   position: absolute;
-      top: 0;
-      left: 0;
+  top: 0;
+  left: 0;
   width: 30px;
 }
 
@@ -670,14 +739,14 @@ ul.pagination li a.active {
 }
 
 @keyframes arrow-movement {
-  0% { 
-      opacity: 0;
-      bottom: 5%;
+  0% {
+    opacity: 0;
+    bottom: 5%;
   }
   70% {
-      opacity: 1;
+    opacity: 1;
   }
-  100% { 
-      opacity: 0;
+  100% {
+    opacity: 0;
   }
 }
